--- a/templates/shelter_news.html
+++ b/templates/shelter_news.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>{{shelter_news.name}}</h1>
-<div class="container-fluid all_cards">
+<div class="container-fluid all_cards" style="flex-direction: column-reverse;">
     {% for news in shelter_news.news.all %}
     <div class="all_card">
         <h2>{{news.name_news}}</h2>
