--- a/templates/allAnimals.html
+++ b/templates/allAnimals.html
@@ -3,53 +3,52 @@
 {% load help_filter %}
 
 {% block content %}
-<p class="main-big-text text-center">Найди своего любимца</p>
-<div class="filter-animals">
-    <div class="d-flex">
-        <div>
-            <select name="shelters" id="select_shelter">
-                <option value="Все приюты" id="first_shelter">Все приюты</option> 
-                {% for shelter in shelters %}
-                    <option selected value="{{shelter}}">{{shelter}}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <p style="margin: 0 20px">или</p>
-        <div>
-            <select name="shelters" id="select_city">
-                <option value="Все города" id="first_city">Все города</option> 
-                {% for city in citys %}
-                    <option value="{{city}}">{{city}}</option>
-                {% endfor %}
-            </select>
-        </div>        
-    </div>
-</div>
 
-<section class="container-fluid cards row g-5" id="cards_animal">
-    {% for card in collection %}
-    <div class="col-3 col-offset-2 card_animal" name="{{card.choice_shelter}}+{{card.city}}">
-        <a href="help/{{card.id}}" class="card">
-            <div class="img">
-                <img class="w-100" src="/{{card.photo}}">
-                <div class="background"></div>
-                <p class="post_text">Поддержать проект</p>
+<section class="container-fluid cards background-images row g-5" id="cards_animal">
+    <p class="login-title">Найди своего любимца</p>
+    <div class="filter-animals">
+        <div class="d-flex">
+            <div>
+                <select name="shelters" id="select_shelter">
+                    <option value="Все приюты" id="first_shelter">Все приюты</option> 
+                    {% for shelter in shelters %}
+                        <option selected value="{{shelter}}">{{shelter}}</option>
+                    {% endfor %}
+                </select>
             </div>
-            <div class="p-3">
-                <p class="name">{{card.name}}</p>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width:{% persent card.summ_now card.summ %}%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">{% persent card.summ_now card.summ %}%</div>
+            <p style="margin: 0 20px">или</p>
+            <div>
+                <select name="shelters" id="select_city">
+                    <option value="Все города" id="first_city">Все города</option> 
+                    {% for city in citys %}
+                        <option value="{{city}}">{{city}}</option>
+                    {% endfor %}
+                </select>
+            </div>        
+        </div>
+    </div>
+    {% for card in collection %}
+    <div class="col-4 col-offset-2 card_animal" name="{{card.choice_shelter}}+{{card.city}}">
+        <a href="help/{{card.id}}" class="ones_card">
+            <div class="img">
+                <div class="photo">
+                    <img src="/{{card.photo}}">
                 </div>
-                <div class="info">
-                    <div class="left">
-                        <p class="persent">{% persent card.summ_now card.summ %} %</p>
-                        <p class="info_text">Идет сбор {{card.summ}}</p>
+                <div class="progress-bar-arc">
+                    <div class="bar-arc">
+                        <canvas id="canvas_{{card.id}}" onload="drawArc('canvas_{{card.id}}', {% persent card.summ_now card.summ %});"></canvas>
+                        <img src="/static/img/imgForSite/progress_arc.png">
+                        <p>{% persent card.summ_now card.summ %}%</p>
                     </div>
-                    <div class="right">
-                        <p class="summ">{{card.summ_now}} ₽</p>
-                        <p class="info_text">Собрано</p>
+                    <div class="progress">
+                        <p>{{card.summ}}<br><span>Идет сбор</span></p>
+                        <p> {{card.summ_now}}<br><span>Собрано</span></p>
                     </div>
-                </div> 
+                </div>
+            </div>
+            <div class="text">
+                <p class="name">{{card.name}}</p>
+                <p class="comment">{{card.comment}}</p>
             </div>
         </a>
     </div>
