--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,60 +1,66 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid ">
-    <h1>Забрали</h1>
-    <div class="row g-5 lost_cards">
-        {% for card in collection_taken %}
-            <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
-                <div class="img">
-                    <img class="w-100" src="/{{card.photo}}">
-                    <div class="background"></div>
-                    <p class="post_text">{{card.status}}</p>
+<div class="container-fluid background-images" style="min-height: 500px">
+    {% if collection_taken %}
+        <p class="login-title" style="padding: 0">Забрали</p>
+        <div class="row g-5 lost_cards">
+            {% for card in collection_taken %}
+                <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
+                    <div class="img">
+                        <img class="w-100" src="/{{card.photo}}">
+                        <div class="background"></div>
+                        <p class="post_text">{{card.status}}</p>
+                    </div>
+                    <div class="p-3">
+                        <p class="name">Приют: {{card.choice_shelter}}</p>
+                        <p class="name">Город: {{card.city}}</p>
+                        <p class="text">Порода: {{card.breed}}</p>
+                        <p class="text">Описание: {{card.comment}}</p>
+                    </div>
                 </div>
-                <div class="p-3">
-                    <p class="name">Приют: {{card.choice_shelter}}</p>
-                    <p class="name">Город: {{card.city}}</p>
-                    <p class="text">Порода: {{card.breed}}</p>
-                    <p class="text">Описание: {{card.comment}}</p>
+            {% endfor %}        
+        </div>
+    {% endif %}
+    {% if collection_archive %}
+        <p class="login-title" style="padding: 0">В архиве</p>
+        <div class="row g-5 lost_cards">
+            {% for card in collection_archive %}
+                <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
+                    <div class="img">
+                        <img class="w-100" src="/{{card.photo}}">
+                        <div class="background"></div>
+                        <p class="post_text">{{card.status}}</p>
+                    </div>
+                    <div class="p-3">
+                        <p class="name">Приют: {{card.choice_shelter}}</p>
+                        <p class="name">Город: {{card.city}}</p>
+                        <p class="text">Порода: {{card.breed}}</p>
+                        <p class="text">Описание: {{card.comment}}</p>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}        
-    </div>
-    <h1>В архиве</h1>
-    <div class="row g-5 lost_cards">
-        {% for card in collection_archive %}
-            <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
-                <div class="img">
-                    <img class="w-100" src="/{{card.photo}}">
-                    <div class="background"></div>
-                    <p class="post_text">{{card.status}}</p>
+            {% endfor %}        
+        </div>
+    {% endif %}
+    {% if collection_died %}
+        <p class="login-title" style="padding: 0">Умерли</p>
+        <div class="row g-5 lost_cards">
+            {% for card in collection_died %}
+                <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
+                    <div class="img">
+                        <img class="w-100" src="/{{card.photo}}">
+                        <div class="background"></div>
+                        <p class="post_text">{{card.status}}</p>
+                    </div>
+                    <div class="p-3">
+                        <p class="name">Приют: {{card.choice_shelter}}</p>
+                        <p class="name">Город: {{card.city}}</p>
+                        <p class="text">Порода: {{card.breed}}</p>
+                        <p class="text">Описание: {{card.comment}}</p>
+                    </div>
                 </div>
-                <div class="p-3">
-                    <p class="name">Приют: {{card.choice_shelter}}</p>
-                    <p class="name">Город: {{card.city}}</p>
-                    <p class="text">Порода: {{card.breed}}</p>
-                    <p class="text">Описание: {{card.comment}}</p>
-                </div>
-            </div>
-        {% endfor %}        
-    </div>
-    <h1>Умерли</h1>
-    <div class="row g-5 lost_cards">
-        {% for card in collection_died %}
-            <div class="col-3 col-offset-2 lost_cards_animal card_animal" name="{{card.breed}}+{{card.city}}">
-                <div class="img">
-                    <img class="w-100" src="/{{card.photo}}">
-                    <div class="background"></div>
-                    <p class="post_text">{{card.status}}</p>
-                </div>
-                <div class="p-3">
-                    <p class="name">Приют: {{card.choice_shelter}}</p>
-                    <p class="name">Город: {{card.city}}</p>
-                    <p class="text">Порода: {{card.breed}}</p>
-                    <p class="text">Описание: {{card.comment}}</p>
-                </div>
-            </div>
-        {% endfor %}        
-    </div>
+            {% endfor %}        
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
