--- a/templates/shelterAnimals.html
+++ b/templates/shelterAnimals.html
@@ -3,32 +3,31 @@
 {% load help_filter %}
 
 {% block content %}
-<section class="container-fluid">
-    <h2>Все питомцы {{name_shelter}}</h2>
+<section class="container-fluid background-images">
+    <p class="login-title">Все питомцы {{name_shelter}}</p>
         <div class="cards row g-5">
             {% for card in shelter_collection %}
-            <div class="col-3 col-offset-2 card_animal" name="{{card.choice_shelter}}+{{card.city}}">
-                <a href="{% url 'helpPage' card.id %}" class="card">
+            <div class="col-4 col-offset-2 card_animal" name="{{card.choice_shelter}}+{{card.city}}">
+                <a href="{% url 'helpPage' card.id %}" class="ones_card">
                     <div class="img">
-                        <img class="w-100" src="/{{card.photo}}">
-                        <div class="background"></div>
-                        <p class="post_text">Поддержать проект</p>
-                    </div>
-                    <div class="p-3">
-                        <p class="name">{{card.name}}</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width:{% persent card.summ_now card.summ %}%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">{% persent card.summ_now card.summ %}%</div>
+                        <div class="photo">
+                            <img src="/{{card.photo}}">
                         </div>
-                        <div class="info">
-                            <div class="left">
-                                <p class="persent">{% persent card.summ_now card.summ %} %</p>
-                                <p class="info_text">Идет сбор {{card.summ}}</p>
+                        <div class="progress-bar-arc">
+                            <div class="bar-arc">
+                                <canvas id="canvas_{{card.id}}" onload="drawArc('canvas_{{card.id}}', {% persent card.summ_now card.summ %});"></canvas>
+                                <img src="/static/img/imgForSite/progress_arc.png">
+                                <p>{% persent card.summ_now card.summ %}%</p>
                             </div>
-                            <div class="right">
-                                <p class="summ">{{card.summ_now}} ₽</p>
-                                <p class="info_text">Собрано</p>
+                            <div class="progress">
+                                <p>{{card.summ}}<br><span>Идет сбор</span></p>
+                                <p> {{card.summ_now}}<br><span>Собрано</span></p>
                             </div>
-                        </div> 
+                        </div>
+                    </div>
+                    <div class="text">
+                        <p class="name">{{card.name}}</p>
+                        <p class="comment">{{card.comment}}</p>
                     </div>
                 </a>
             </div>
